--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
       <li class="definition">
         <a class="anchor" name="flexicon" href="#flexicon">#</a>
         <p class="word">flex&#8729;i&#8729;con</p>
-        <span class="pronunciation">/ˈleksɪkɑn/</span>
+        <span class="pronunciation">/ˈfleksɪkɑn/</span>
         <p class="part-of-speech">noun</p>
         <p class="defn">
           the part of a person's vocabulary that is possibly made up.
@@ -80,6 +80,30 @@
         </p>
       </li>
       <li class="definition">
+        <a class="anchor" name="feasonable" href="#feasonable">#</a>
+        <p class="word">fea&#8729;son&#8729;a&#8729;ble</p>
+        <span class="pronunciation">/ˈfēz(ə)nəb(ə)l/</span>
+        <p class="part-of-speech">adjective</p>
+        <p class="defn">
+          Both feasible and reasonable.
+        </p>
+        <p class="example">
+          "It's feasonable to make it to downtown in 20 minutes."
+        </p>
+      </li>
+      <li class="definition">
+        <a class="anchor" name="flustrated" href="#flustrated">#</a>
+        <p class="word">flus&#8729;trat&#8729;ed</p>
+        <span class="pronunciation">/ˈfləˌstrādəd/</span>
+        <p class="part-of-speech">adjective</p>
+        <p class="defn">
+          Feeling or expressing distress and agitation.
+        </p>
+        <p class="example">
+          "Tripping over his words, he became flustrated."
+        </p>
+      </li>
+      <li class="definition">
         <a class="anchor" name="hands-offish" href="#hands-offish">#</a>
         <p class="word">hands-off&#8729;ish</p>
         <span class="pronunciation">/ˌhandsˈôfiSH/</span>
@@ -89,6 +113,18 @@
         </p>
         <p class="example">
           "I asked Darren to help set up chairs, but he's being very hands-offish."
+        </p>
+      </li>
+      <li class="definition">
+        <a class="anchor" name="clinchpin" href="#clinchpin">#</a>
+        <p class="word">clinch&#8729;pin</p>
+        <span class="pronunciation">/ˌklin(t)SH'pin/</span>
+        <p class="part-of-speech">noun</p>
+        <p class="defn">
+          the final and most important part of a plan.
+        </p>
+        <p class="example">
+          "Robbing the casino is the easy part. It's the getaway that's the clinchpin."
         </p>
       </li>
       <li class="definition">
@@ -103,7 +139,30 @@
           "The movie theater has a discount for olderly people."
         </p>
       </li>
-
+      <li class="definition">
+        <a class="anchor" name="shorturoys" href="#shorturoys">#</a>
+        <p class="word">shor&#8729;tur&#8729;oys</p>
+        <span class="pronunciation">/ˈSHôrtəˌrois/</span>
+        <p class="part-of-speech">noun</p>
+        <p class="defn">
+          a pair of corduroys that have been cut into shorts.
+        </p>
+        <p class="example">
+          "Ben's wardrobe is composed mostly of jorts and shorturoys."
+        </p>
+      </li>
+      <li class="definition">
+        <a class="anchor" name="tauntalize" href="#tauntalize">#</a>
+        <p class="word">taun&#8729;ta&#8729;lize</p>
+        <span class="pronunciation">/ˈtôn(t)lˌīz/</span>
+        <p class="part-of-speech">verb</p>
+        <p class="defn">
+          tease (someone) with the sight or promise of something unobtainable.
+        </p>
+        <p class="example">
+          "The dog is tauntalized by the smell of that bacon."
+        </p>
+      </li>
     </ul>
   </body>
 </html>
