Trying out this media query stuff

--- a/index.html
+++ b/index.html
@@ -51,6 +51,21 @@
       a:not(:hover) {
         text-decoration: none;
       }
+      @media screen and (max-width: 600px) {
+        .word {
+          font-size: 1.88em;
+        }
+        a.anchor {
+            font-size: 1.88em;
+        }
+        .definition-list {
+          margin: 0;
+          max-width: none;
+        }
+        .example {
+          font-size: 18px;
+        }
+      }
     </style>
   </head>
   <body>
